--- a/config
+++ b/config
@@ -1,8 +1,8 @@
 [earth]
 "Earth"
 cloud_map=clouds_4096.jpg
-map=earth.jpg
-night_map=night.gif
-bump_map=bump.jpg
+map=earth_monthly.jpg
+night_map=earth_night_jk.jpg
+bump_map=earth_bump.jpg
 bump_scale=1
-specular_map=specular.jpg
+specular_map=earth_spec.jpg
